@@ -49,6 +49,6 @@ extern int sound_stereo_ay_narrow;
 
 int sound_lowlevel_init( const char *device, int *freqptr, int *stereoptr );
 void sound_lowlevel_end( void );
-void sound_lowlevel_frame( unsigned char *data, int len );
+void sound_lowlevel_frame( libspectrum_signed_word *data, int len );
 
 #endif				/* #ifndef FUSE_SOUND_H */
