@@ -45,7 +45,7 @@
 
 
 static int soundfd=-1;
-static int sixteenbit=0;
+static int sixteenbit=1;
 
 
 /* returns 0 on *success*, and adjusts freq/stereo args to reflect
@@ -84,20 +84,21 @@ if(fcntl(soundfd,F_SETFL,flags)==-1)
   return 1;
   }
 
-tmp=AFMT_U8;
-if(ioctl(soundfd,SNDCTL_DSP_SETFMT,&tmp)==-1)
+tmp=AFMT_S16_NE;
+sixteenbit=1;
+if(settings_current.sound_force_8bit || ioctl(soundfd,SNDCTL_DSP_SETFMT,&tmp)==-1)
   {
-  /* try 16-bit - may be a 16-bit-only device */
-  tmp=AFMT_S16_LE;
+  /* try 8-bit - may be an 8-bit-only device */
+  tmp=AFMT_U8;
   if((ioctl(soundfd,SNDCTL_DSP_SETFMT,&tmp))==-1)
     {
     settings_current.sound = 0;
-    ui_error(UI_ERROR_ERROR,"couldn't set sound device into 16-bit mode: %s",strerror(errno));
+    ui_error(UI_ERROR_ERROR,"couldn't set sound device into 8-bit mode: %s",strerror(errno));
     close(soundfd);
     return 1;
     }
 
-  sixteenbit=1;
+  sixteenbit=0;
   }
 
 /* XXX should it warn if it didn't get the stereoness it wanted? */
@@ -151,30 +152,31 @@ if(soundfd!=-1)
 }
 
 
-void sound_lowlevel_frame(unsigned char *data,int len)
+void sound_lowlevel_frame(libspectrum_signed_word *data,int len)
 {
-static unsigned char buf16[8192];
+static unsigned char buf8[4096];
+unsigned char *data8=(unsigned char *)data;
 int ret=0,ofs=0;
 
-if(sixteenbit)
+len<<=1;	/* now in bytes */
+
+if(!sixteenbit)
   {
-  unsigned char *src,*dst;
+  libspectrum_signed_word *src;
+  unsigned char *dst;
   int f;
 
-  src=data; dst=buf16;
+  src=data; dst=buf8;
+  len>>=1;
   for(f=0;f<len;f++)
-    {
-    *dst++=128;
-    *dst++=*src++-128;
-    }
-
-  data=buf16;
-  len<<=1;
+    *dst++=128+(int)((*src++)/256);
+  
+  data8=buf8;
   }
 
 while(len)
   {
-  ret=write(soundfd,data+ofs,len);
+  ret=write(soundfd,data8+ofs,len);
   if(ret>0)
     ofs+=ret,len-=ret;
   }
