@@ -29,3 +29,4 @@ Checkbox, (S)ound enabled, sound, INPUT_KEY_s
 Checkbox, (L)oading sound, sound_load, INPUT_KEY_l
 Checkbox, (A)Y stereo separation, stereo_ay, INPUT_KEY_a
 Checkbox, (B)eeper pseudo-stereo, stereo_beeper, INPUT_KEY_b
+Checkbox, (F)orce 8-bit, sound_force_8bit, INPUT_KEY_f
