@@ -673,3 +673,5 @@
 	 the 'real joystick' code actually use the input layer.
 20040328 compat.h,configure.in,compat/{Makefile.am,dirname.c}: add dirname
 	 replacement.
+20040329 fuse.c,settings.dat,sound.[ch],man/fuse.1,sound/osssound.c,
+	 ui/options.dat: full 16-bit sound code (Rus).
